# droid-app-pkgr

./: meson.build
include/: Backend.h
qml/: home.qml  main.qml  p1.qml  p2.qml  qml.qrc
src/: Backend.cpp  main.cpp
